--- a/makeReservation.html
+++ b/makeReservation.html
@@ -23,12 +23,41 @@
                   <hr>
                   <div class="text-center">
                     <a href="viewTable.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">View Tables</a>
-                    <a href="makeReservation.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Make Resverations</a>
+                    <a href="home.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Home</a>
                    </div>
                 </div>
             </div>
         </div>
+    <div class="row-12">
+            
+		<div class="row">
+			<div class="col-lg-12">
+
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h4 class="panel-title">Current Reservations</h4>
+					</div>
+					<div class="panel-body" id="tableSection">
+					</div>
+				</div>
+
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h4 class="panel-title">Waiting List</h4>
+					</div>
+					<div class="panel-body" id="waitListSection">
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+
+
+    </div>
+
         <div class="row-4">
+            <a href="#"  style="border-right:1px solid #000;height:4px">Clear Table</a>
             <a href="https://www.w3schools.com"  style="border-right:1px solid #000;height:4px">API Table Link</a>            
             <a href="https://www.w3schools.com">API Wait List</a>
 
