--- a/viewTable.html
+++ b/viewTable.html
@@ -22,7 +22,7 @@
                   <p class="lead">Book your seats before they are gone!</p>
                   <hr>
                   <div class="text-center">
-                    <a href="viewTable.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">View Tables</a>
+                    <a href="home.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Home</a>
                     <a href="makeReservation.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Make Resverations</a>
                    </div>
                 </div>
