html links updated

--- a/viewTable.html
+++ b/viewTable.html
@@ -22,15 +22,15 @@
                   <p class="lead">Book your seats before they are gone!</p>
                   <hr>
                   <div class="text-center">
-                    <a href="home.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Home</a>
-                    <a href="makeReservation.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Make Resverations</a>
+                    <a href="/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Home</a>
+                    <a href="/reserve" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Make Resverations</a>
                    </div>
                 </div>
             </div>
         </div>
         <div class="row-4">
-            <a href="https://www.w3schools.com"  style="border-right:1px solid #000;height:4px">API Table Link</a>            
-            <a href="https://www.w3schools.com">API Wait List</a>
+            <a href="/api/tables"  style="border-right:1px solid #000;height:4px">API Table Link</a>            
+            <a href="/api/waitlist">API Wait List</a>
 
         </div>
       </div>
