--- a/makeReservation.html
+++ b/makeReservation.html
@@ -22,8 +22,8 @@
                   <p class="lead">Book your seats before they are gone!</p>
                   <hr>
                   <div class="text-center">
-                    <a href="viewTable.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">View Tables</a>
-                    <a href="home.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Home</a>
+                    <a href="/table" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">View Tables</a>
+                    <a href="/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Home</a>
                    </div>
                 </div>
             </div>
@@ -58,8 +58,8 @@
 
         <div class="row-4">
             <a href="#"  style="border-right:1px solid #000;height:4px">Clear Table</a>
-            <a href="https://www.w3schools.com"  style="border-right:1px solid #000;height:4px">API Table Link</a>            
-            <a href="https://www.w3schools.com">API Wait List</a>
+            <a href="/api/tables"  style="border-right:1px solid #000;height:4px">API Table Link</a>            
+            <a href="/api/waitlist">API Wait List</a>
 
         </div>
       </div>
