--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container">
-        <div class="row-12">
+        <div class="row">
             
             <div class="jumbotron jumbotron-fluid">
                 <div class="container; text-center">
@@ -28,7 +28,7 @@
                 </div>
             </div>
         </div>
-        <div class="row-4">
+        <div class="row">
             <a href="/api/tables"  style="border-right:1px solid #000;height:4px">API Table Link</a>            
             <a href="/api/waitlist">API Wait List</a>
 
