--- a/makeReservation.html
+++ b/makeReservation.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container">
-        <div class="row-12">
+        <div class="row">
             
             <div class="jumbotron jumbotron-fluid">
                 <div class="container; text-center">
@@ -28,35 +28,34 @@
                 </div>
             </div>
         </div>
-    <div class="row-12">
+    <div class="row">
             
-		<div class="row">
-			<div class="col-lg-12">
-
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<h4 class="panel-title">Current Reservations</h4>
-					</div>
-					<div class="panel-body" id="tableSection">
-					</div>
-				</div>
-
-				<div class="panel panel-default">
-					<div class="panel-heading">
-						<h4 class="panel-title">Waiting List</h4>
-					</div>
-					<div class="panel-body" id="waitListSection">
-					</div>
-				</div>
-			</div>
-		</div>
+      <form>
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" class="form-control" id="name" aria-describedby="emailHelp">
+        </div>
+        <div class="form-group">
+          <label for="phoneNumber">Phone Number</label>
+          <input type="text" class="form-control" id="phoneNumber">
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="text" class="form-control" id="email">
+        </div>
+        <div class="form-group">
+          <label for="uniqueID">Unique ID</label>
+          <input type="text" class="form-control" id="uniqueID">
+        </div>
+        <button type="button" class="btn btn-primary">Submit</button>
+      </form>    
 
 
 
 
     </div>
 
-        <div class="row-4">
+        <div class="row">
             <a href="#"  style="border-right:1px solid #000;height:4px">Clear Table</a>
             <a href="/api/tables"  style="border-right:1px solid #000;height:4px">API Table Link</a>            
             <a href="/api/waitlist">API Wait List</a>
