--- a/makeReservation.html
+++ b/makeReservation.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container">
-        <div class="row">
+        <div class="row-12">
             
             <div class="jumbotron jumbotron-fluid">
                 <div class="container; text-center">
