--- a/makeReservation.html
+++ b/makeReservation.html
@@ -47,7 +47,7 @@
           <label for="uniqueID">Unique ID</label>
           <input type="text" class="form-control" id="uniqueID">
         </div>
-        <button type="button" class="btn btn-primary">Submit</button>
+        <button type="button" class="btn btn-primary" id="add-btn">Submit</button>
       </form>    
 
 
@@ -70,5 +70,25 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <script type="text/javascript">
+      // Question: What does this code do?
+      $("#add-btn").on("click", function(event) {
+        event.preventDefault();
+        var newReservation = {
+          name: $("#name").val().trim(),
+          phone: $("#phoneNumber").val().trim(),
+          email: $("#emali").val().trim(),
+          unique_id: $("#uniqueID").val().trim()
+        };
+  
+        // Question: What does this code do??
+        $.post("/api/tables", newReservation)
+          .then(function(data) {
+            console.log("makeReservation.html", data);
+            alert("Your reservation has been received!");
+          });
+      });
+    </script>
   </body>
 </html>
